Add component to hold search results and interface expected for when the search results come in. Removed searchQuery signal since search is being handled by FormControl and updated relevant test file Added test to the component holding the search results

--- a/frontend/src/app/components/city-search/city-search.html
+++ b/frontend/src/app/components/city-search/city-search.html
@@ -1,7 +1,7 @@
 <mat-form-field class="example-form-field">
     <mat-label>Search city weather</mat-label>
     <input matInput type="text" [formControl]="searchControl">
-    @if (searchQuery()) {
+    @if (searchControl.value) {
     <button matSuffix matIconButton aria-label="Clear" (click)="onClear()">
         <mat-icon>close</mat-icon>
     </button>
