--- a/frontend/src/app/components/main-page/main-page.html
+++ b/frontend/src/app/components/main-page/main-page.html
@@ -1,3 +1,4 @@
 <div class="main-page">
     <app-city-search></app-city-search>
+    <app-city-weather-page [cityWeather]="cityWeather()"></app-city-weather-page>
 </div>
