Added output to the search component to move all logic to the parent Added search route and search controller to the backend using hardcoded responses for testing Updated main page with event handler of output from search component to call the backend

--- a/frontend/src/app/components/main-page/main-page.html
+++ b/frontend/src/app/components/main-page/main-page.html
@@ -1,4 +1,4 @@
 <div class="main-page">
-    <app-city-search></app-city-search>
+    <app-city-search (onSearch)="onSearch($event)"></app-city-search>
     <app-city-weather-page [cityWeather]="cityWeather()"></app-city-weather-page>
 </div>
