--- a/frontend/src/app/components/city-search/city-search.html
+++ b/frontend/src/app/components/city-search/city-search.html
@@ -1,4 +1,4 @@
-<mat-form-field class="example-form-field">
+<mat-form-field class="search-form-field">
     <mat-label>Search city weather</mat-label>
     <input matInput type="text" [formControl]="searchControl">
     @if (searchControl.value) {
@@ -6,4 +6,15 @@
         <mat-icon>close</mat-icon>
     </button>
     }
+</mat-form-field>
+
+<mat-form-field class="country-select-form-field">
+    <mat-label>
+        Country
+    </mat-label>
+    <mat-select [formControl]="countryControl">
+        @for (country of countries; track country.code) {
+            <mat-option [value]="country.code">{{ country.name }}</mat-option>
+        }
+    </mat-select>
 </mat-form-field>
