--- a/frontend/src/app/components/city-search/city-search.html
+++ b/frontend/src/app/components/city-search/city-search.html
@@ -1,20 +1,20 @@
-<mat-form-field class="search-form-field">
-    <mat-label>Search city weather</mat-label>
-    <input matInput type="text" [formControl]="searchControl">
-    @if (searchControl.value) {
-    <button matSuffix matIconButton aria-label="Clear" (click)="onClear()">
-        <mat-icon>close</mat-icon>
-    </button>
-    }
-</mat-form-field>
-
-<mat-form-field class="country-select-form-field">
-    <mat-label>
-        Country
-    </mat-label>
-    <mat-select [formControl]="countryControl">
+<div class="d-flex gap-2 gap-md-3 flex-nowrap justify-content-center mb-4">
+    <mat-form-field class="search-form-field">
+      <mat-label>Search city weather</mat-label>
+      <input matInput type="text" [formControl]="searchControl">
+      @if (searchControl.value) {
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="onClear()">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
+    </mat-form-field>
+  
+    <mat-form-field class="country-select-form-field">
+      <mat-label>Country</mat-label>
+      <mat-select [formControl]="countryControl">
         @for (country of countries; track country.code) {
-            <mat-option [value]="country.code">{{ country.name }}</mat-option>
+          <mat-option [value]="country.code">{{ country.name }}</mat-option>
         }
-    </mat-select>
-</mat-form-field>
+      </mat-select>
+    </mat-form-field>
+  </div>
