Added a loading spinner for better UX and to notify the user that their request for is being processed

--- a/frontend/src/app/components/city-weather-page/city-weather-page.scss
+++ b/frontend/src/app/components/city-weather-page/city-weather-page.scss
@@ -85,6 +85,11 @@
       color: var(--mat-sys-on-surface);
     }
   }
+
+  .loading-container {
+    min-height: 200px;
+    align-items: center;
+  }
   
   .no-data {
     color: var(--mat-sys-on-surface-variant);
